--- a/MyCamera/Info.plist
+++ b/MyCamera/Info.plist
@@ -20,6 +20,14 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+	<string>Let us access your camera</string>
+	<key>NSDocumentsFolderUsageDescription</key>
+	<string>Lets us use your files</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Let us use your microphone</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Let us use your photo library</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
@@ -33,6 +41,10 @@
 	<array>
 		<string>armv7</string>
 	</array>
+	<key>UIRequiresFullScreen</key>
+	<true/>
+	<key>UIStatusBarHidden</key>
+	<true/>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
