--- a/BmCamera.xcodeproj/xcshareddata/xcschemes/MyCamera.xcscheme
+++ b/BmCamera.xcodeproj/xcshareddata/xcschemes/MyCamera.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "472A7FF825F75AC400E24110"
-               BuildableName = "MyCamera.app"
-               BlueprintName = "MyCamera"
-               ReferencedContainer = "container:MyCamera.xcodeproj">
+               BuildableName = "BmCamera.app"
+               BlueprintName = "BmCamera"
+               ReferencedContainer = "container:BmCamera.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -45,9 +45,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "472A7FF825F75AC400E24110"
-            BuildableName = "MyCamera.app"
-            BlueprintName = "MyCamera"
-            ReferencedContainer = "container:MyCamera.xcodeproj">
+            BuildableName = "BmCamera.app"
+            BlueprintName = "BmCamera"
+            ReferencedContainer = "container:BmCamera.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -62,9 +62,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "472A7FF825F75AC400E24110"
-            BuildableName = "MyCamera.app"
-            BlueprintName = "MyCamera"
-            ReferencedContainer = "container:MyCamera.xcodeproj">
+            BuildableName = "BmCamera.app"
+            BlueprintName = "BmCamera"
+            ReferencedContainer = "container:BmCamera.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
